Create WorkletThreadHolder in test only when instance exists

AudioWorkletThread::CreateSharedBackingThreadForTest() creates
a backing thread for a unit test, but it did not check for the
existing thread holder instance. Without a valid instance, the
backing thread cannot be function correctly.

This CL adds a check for the thread holder instance before it
creates a thread.

Bug: 774365
Test: webkit_unit_tests does not fail anymore.
Change-Id: I3358ba707d637d4cf6201535dd4c4364c0bf94ea